# modernimage

./: .gitignore  Makefile  README.md
.github/workflows/: release.yml  test.yml
golang/: .gitignore  README.md  download.go  fuzz_test.go  go.mod  imageinfo_test.go  jpeg_rotate_fallback.go  jpegseg.go  modernimage.go  modernimage_test.go  version.go
golang/shared/include/: modernimage.h
rust/: .gitignore  Cargo.toml  README.md  build.rs
rust/src/: error.rs  ffi.rs  lib.rs
scripts/: download.sh  release.sh  setup-go.sh  setup.sh
scripts/gen_alpha_png/: main.go
scripts/gen_marker_jpeg/: main.go
scripts/gen_nonmcu_jpeg/: main.go
testdata/: THIRD_PARTY.md
typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: ffi.ts  index.ts  library.ts  modernimage.ts  types.ts
typescript/src/test/: modernimage.test.ts
